# Smart-Buddy

./: .env.example  .gitignore  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_FLASK.md  Dockerfile  Dockerfile.production  LICENSE  PRODUCTION_STATUS.md  PROJECT_DESCRIPTION.md  QUICK_START.md  README.md  README_COMPETITION.md  README_OLD.md  RELEASE.md  SUBMISSION_GUIDE.md  Smart_Buddy_Competition_Showcase.ipynb  azure-containerapp.yaml  chat.py  check_models.py  cloud-run.yaml  docker-compose.yml  gemini_out.txt  nginx.conf  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  server_flask.py  server_simple.py  wsgi.py
.github/workflows/: ci.yml  (+1 more)
docs/: credentials.md  google_integration.md  install.md  mcp_integration.md  multimedia_features.md
examples/: docker_run.sh  gemini_example.py  gpt4all_example.py  local_llm_example.py  run_demo.py  run_in_docker.ps1
scripts/: deploy_cloud_run.ps1  deploy_cloud_run.sh  install_google_sdks.ps1  install_gpt4all.ps1  install_local_llm.ps1  owner_grant_and_test.ps1  run_ci_benchmarks.py  run_eval.py  run_localhost.ps1
smart_buddy/: __init__.py  audit.py  llm.py  logging.py  memory.py  metrics.py  prompting.py  rag.py  safety.py  semantic_memory.py
smart_buddy_agent/: agent.json  chat_agent.py  main.py
static/: chat.html
tests/: test_llm.py  test_llm_adc.py  test_llm_fallbacks.py  test_llm_network_surface.py  test_mcp_integration.py  test_memory.py  test_memory_integration.py  test_observability.py  test_planner.py  test_prompting.py  test_rag.py  test_robustness.py  test_safety.py  test_task_agent.py
(+26 files in other folders)
